Tweak on bd_rate.ipynb

--- a/notebooks/bd_rate.ipynb
+++ b/notebooks/bd_rate.ipynb
@@ -56,11 +56,19 @@
     "            readout_format=\".3e\",\n",
     "        )\n",
     "    else:\n",
+    "        str_vmin = str(min(abs(vmin), abs(vmax)))\n",
+    "        dot = str_vmin.find(\".\")\n",
+    "        if dot != -1:\n",
+    "            format_n = len(str_vmin[dot + 1: ].rstrip(\"0\"))\n",
+    "            readout_format=f\".{format_n + 1}e\"\n",
+    "        else:\n",
+    "            readout_format = \".2f\"\n",
     "        return widgets.FloatSlider(\n",
     "            min=vmin,\n",
     "            max=vmax,\n",
     "            step=(vmax - vmin) / n_steps,\n",
     "            value=(vmax + vmin) / 2,\n",
+    "            readout_format=readout_format,\n",
     "        )"
    ]
   },
@@ -109,10 +117,10 @@
     "    **kwargs,\n",
     ") -> widgets.VBox:\n",
     "    n_methods = len(methods)\n",
-    "    fig = plt.figure(figsize=(6, 6 * n_methods))\n",
+    "    fig = plt.figure(figsize=(6 * n_methods, 6))\n",
     "    axes = []\n",
     "    for i in range(n_methods):\n",
-    "        ax = fig.add_subplot(n_methods, 1, i + 1, projection=\"3d\")\n",
+    "        ax = fig.add_subplot(1, n_methods, i + 1, projection=\"3d\")\n",
     "        ax.set_title(f\"{hazard_cls.__name__} {methods[i]} function\")\n",
     "        axes.append(ax)\n",
     "\n",
@@ -288,14 +296,14 @@
    "source": [
     "make_hazard_widget(\n",
     "    scale=(1e-3, 1.0),\n",
-    "    e0=(0, 10, False),\n",
-    "    alpha_age=(1e-7, 1e-3),\n",
-    "    alpha=(0.1, 0.5),\n",
-    "    beta=(1e-5, 1e-3),\n",
+    "    alpha_age=(1e-8, 1e-5),\n",
+    "    alpha=(0.001, 0.1),\n",
+    "    beta=(1e-7, 1e-5),\n",
+    "    slope=(0, 1.0, False),\n",
     "    methods=[\"hazard\", \"survival\"],\n",
-    "    age_max=800000,\n",
-    "    energy_max=20,\n",
-    "    hazard_cls=bd.ELGompertzHazard,\n",
+    "    age_max=100000,\n",
+    "    energy_max=60,\n",
+    "    hazard_cls=bd.SlopeELGHazard,\n",
     ")"
    ]
   },
@@ -307,11 +315,13 @@
    "outputs": [],
    "source": [
     "make_birth_widget(\n",
-    "    scale=(1e-6, 1e-3),\n",
-    "    alpha=(1e-2, 1.0),\n",
-    "    e0=(0, 10, False),\n",
+    "    scale=(1e-5, 1e-3),\n",
+    "    slope=(0, 1.0, False),\n",
+    "    const=(-0.001, 0.001, False),\n",
+    "    delay=(0, 20, False),\n",
     "    age_max=200000,\n",
-    "    energy_max=10,\n",
+    "    energy_max=40,\n",
+    "    birth_cls=bd.SlopeELBirth,\n",
     ")"
    ]
   },
@@ -335,6 +345,22 @@
     "    birth_e0=(0, 10, False),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38257e7d-aad1-47e7-a064-852a1cc4975a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f455ebc-0a68-4e13-9b29-0b9b987793bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -353,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
