--- a/notebooks/bd_rate.ipynb
+++ b/notebooks/bd_rate.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0dadbf8d-d3eb-42b8-a9c1-265e61f6edd8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import dataclasses\n",
+    "from collections.abc import Sequence\n",
     "from typing import Any, Literal\n",
     "\n",
     "import ipywidgets as widgets\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c4b6ebde-ea34-4a3e-92b3-964ac39c8452",
    "metadata": {},
    "outputs": [],
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8d94990f-99ac-4dc0-a5c9-1b19806b8885",
    "metadata": {},
    "outputs": [],
@@ -112,10 +113,12 @@
     "    energy_max: float = 16,\n",
     "    n_discr: int = 101,\n",
     "    hazard_cls: type[bd.HazardFunction] = bd.GompertzHazard,\n",
-    "    methods: list[Literal[\"hazard\", \"cumulative hazard\", \"survival\"]] = [\"hazard\"],\n",
-    "    fixed_params: dict[str, Any] = {},\n",
+    "    methods: Sequence[Literal[\"hazard\", \"cumulative hazard\", \"survival\"]] = (\"hazard\",),\n",
+    "    fixed_params: dict[str, Any] | None = None,\n",
     "    **kwargs,\n",
     ") -> widgets.VBox:\n",
+    "    if fixed_params is None:\n",
+    "        fixed_params = {}\n",
     "    n_methods = len(methods)\n",
     "    fig = plt.figure(figsize=(6 * n_methods, 6))\n",
     "    axes = []\n",
@@ -173,8 +176,8 @@
     "    n_discr: int = 101,\n",
     "    birth_cls: type[bd.BirthFunction] = bd.EnergyLogisticBirth,\n",
     "    hazard_cls: type[bd.HazardFunction] = bd.GompertzHazard,\n",
-    "    hazard_fixed_params: dict[str, Any] = {},\n",
-    "    birth_fixed_params: dict[str, Any] = {},\n",
+    "    hazard_fixed_params: dict[str, Any] | None = None,\n",
+    "    birth_fixed_params: dict[str, Any] | None = None,\n",
     "    **kwargs,\n",
     ") -> widgets.VBox:\n",
     "    fig = plt.figure(figsize=(6, 12))\n",
@@ -182,6 +185,11 @@
     "    ax1.set_title(f\"{hazard_cls.__name__} Expected Lifetime\")\n",
     "    ax2 = fig.add_subplot(212)\n",
     "    ax2.set_title(f\"{hazard_cls.__name__} Expected Num. of children\")\n",
+    "\n",
+    "    if hazard_fixed_params is None:\n",
+    "        hazard_fixed_params = {}\n",
+    "    if birth_fixed_params is None:\n",
+    "        birth_fixed_params = {}\n",
     "\n",
     "    @dataclasses.dataclass\n",
     "    class State:\n",
