--- a/notebooks/diffusion.ipynb
+++ b/notebooks/diffusion.ipynb
@@ -7,14 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import celluloid\n",
-    "import ipywidgets as widgets\n",
     "import numpy as np\n",
-    "from celluloid import Camera\n",
-    "from IPython.display import HTML\n",
-    "from matplotlib import colors as mc\n",
-    "from matplotlib import pyplot as plt\n",
-    "from matplotlib.lines import Line2D"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
