--- a/notebooks/reward_fn.ipynb
+++ b/notebooks/reward_fn.ipynb
@@ -74,7 +74,7 @@
     "    state = State()\n",
     "\n",
     "    def update_figure(alpha: float = 0.0):\n",
-    "        if  state.line is None:\n",
+    "        if state.line is None:\n",
     "            ax.grid(True, which=\"major\")\n",
     "            ax.set_xlabel(\"Energy\", fontsize=12)\n",
     "            ax.set_ylabel(\"Reward Coef\", fontsize=12)\n",
@@ -87,7 +87,10 @@
     "        fig.canvas.draw()\n",
     "        fig.canvas.flush_events()\n",
     "\n",
-    "    interactive = widgets.interactive(update_figure, alpha=make_slider(-1.0, 1.0, logscale=False, n_steps=n_discr))\n",
+    "    interactive = widgets.interactive(\n",
+    "        update_figure,\n",
+    "        alpha=make_slider(-1.0, 1.0, logscale=False, n_steps=n_discr),\n",
+    "    )\n",
     "    return widgets.VBox([interactive])"
    ]
   },
@@ -134,11 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sinh_reward_widget(\n",
-    "    f,\n",
-    "    alpha_max: float = 5.0,\n",
-    "    n_discr: int = 1000\n",
-    ") -> widgets.VBox:\n",
+    "def sinh_reward_widget(f, alpha_max: float = 5.0, n_discr: int = 1000) -> widgets.VBox:\n",
     "    fig = plt.figure(figsize=(6, 6))\n",
     "    ax = fig.add_subplot(111)\n",
     "    ax.set_title(\"Sinh reward_fn\")\n",
@@ -164,7 +163,8 @@
     "        fig.canvas.flush_events()\n",
     "\n",
     "    interactive = widgets.interactive(\n",
-    "        update_figure, alpha=make_slider(0.0, alpha_max, logscale=False, n_steps=n_discr)\n",
+    "        update_figure,\n",
+    "        alpha=make_slider(0.0, alpha_max, logscale=False, n_steps=n_discr),\n",
     "    )\n",
     "    return widgets.VBox([interactive])"
    ]
